@@ -2,6 +2,7 @@ V0.3
 created enemy factory, created small enemies
 pulled out load animations into a helper function
 finally got around to adding comments and doc strings to funcs and classes.
+player now finishes full attack sequence per attack, disables all other abilities
 
 V 0.2
 Finished up random background generation
